--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.8.4",
+    "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
