--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.18.0",
     "joi": "^17.8.4",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
